@@ -6,15 +6,17 @@ from twisted.internet import reactor
 
 from txjsonrpc.netstring.jsonrpc import Proxy
 
+
 def printValue(value):
     print "Result: %s" % str(value)
     reactor.stop()
+
 
 def printError(error):
     print 'error', error
     reactor.stop()
 
-print "Making remote call..."
+
 proxy = Proxy('127.0.0.1', 7080)
 proxy.callRemote('add', 3, 5).addCallbacks(printValue, printError)
 reactor.run()
